--- a/index.html
+++ b/index.html
@@ -1,24 +1,90 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="coinexApp" class="no-js">
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Carlos Alvarez, Theme designer & developer living in Madrid, Spain.">
+        <meta name="author" content="Carlos Alvarez">
+        <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CoinEX</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="app.css">
-</head>
+        <title>Hardik Sondagar</title>
 
-<body>
-    <div ng-view></div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
-    <script src="app.js"></script>
-    <script src="compare/compare.js"></script>
-</body>
+        <!-- Bootstrap core CSS -->
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
+        <!-- Custom styles for this template -->
+        <link href="assets/css/main.css" rel="stylesheet">
+
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500" rel="stylesheet">
+
+        <!-- Just for debugging purposes. Don't actually copy this line! -->
+        <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script> <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script> <![endif]-->
+    </head>
+
+    <body>
+
+        <div class="container">
+            <!-- <div class="logo">
+                <img src="assets/img/logo.png" width="100" alt="BlackTie.co">
+            </div> -->
+            <div class="row centered w">
+                <div class="col-lg-8 col-lg-offset-2 w">
+                    <h1>
+                        <strong>Hardik Sondagar</strong>
+                    </h1>
+                    <br>
+                    <p>CS grad - Tech entrepreneur - Full Stack Developer - Elon Musk & Batman Fan - I like to build things and listen to classic rock songs</p>
+                </div>
+            </div>
+            <div class="row centered">
+                <div class="col-lg-8 col-lg-offset-2 w tooltip-demo">
+                    <a data-toggle="tooltip" title="LinedIn" target="_blank" href="https://in.linkedin.com/in/hardiksondagar">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                    <a data-toggle="tooltip" title="Github" target="_blank" href="https://github.com/hardiksondagar">
+                        <i class="fa fa-github"></i>
+                    </a>
+                    <a data-toggle="tooltip" title="Twitter" target="_blank" href="http://twitter.com/hardiksondagar">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a data-toggle="tooltip" title="Email Me!" target="_blank" href="mailto:hardikmsondagar@gmail.com">
+                        <i class="fa fa-envelope"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+
+        <div class="container">
+            <div class="row w centered">
+                <br>
+                <div class="col-lg-6 col-lg-offset-3">
+                    <!-- <p>Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy.</p> -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Bootstrap core JavaScript
+    ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+
+        <script>
+            $('.tooltip-demo').tooltip({selector: "[data-toggle=tooltip]", container: "body"})
+        </script>
+
+        <!--BACKSTRETCH-->
+        <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
+        <script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
+        <script>
+            $.backstretch("assets/img/bg.jpg", {speed: 500});
+        </script>
+
+    </body>
 </html>
