--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Carlos Alvarez, Theme designer & developer living in Madrid, Spain.">
-        <meta name="author" content="Carlos Alvarez">
+        <meta name="description" content="CS grad - Tech entrepreneur - Full Stack Developer - Elon Musk & Batman Fan - I like to build things and listen to classic rock songs.">
+        <meta name="author" content="Hardik Sondagar">
         <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-        <title>Hardik Sondagar</title>
+        <title>Hardik Sondagar - Full Stack Developer</title>
 
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
