--- a/projects/index.html
+++ b/projects/index.html
@@ -13,12 +13,21 @@
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../assets/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500" rel="stylesheet">
 </head>
 
 <body>
+    <br>
     <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="./">
+                      <strong>Projects</strong>
+                    </a>
+                </div>
+            </div>
+        </nav>
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
@@ -28,7 +37,7 @@
                             This simple web application compares the price of cryptocurrencies between CoinDelta and Koinex exchange.
                         </p>
                         <p>
-                            <a href="coinex" class="btn btn-eyes" role="button">View</a>
+                            <a href="coinex" class="btn btn-primary" role="button">View</a>
                         </p>
                     </div>
                 </div>
