--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <a data-toggle="tooltip" title="Email Me!" target="_blank" href="mailto:hardikmsondagar@gmail.com">
                         <i class="fa fa-envelope"></i>
                     </a>
+                    <a data-toggle="tooltip" title="Projects" target="_blank" href="projects/">
+                        <i class="fa fa-code"></i>
+                    </a>
                 </div>
             </div>
         </div>
